cabal-version:      3.4
name:               new-adventures
version:            1.0.0
license:            GPL-3.0-or-later
license-file:       LICENSE
author:             emdash
maintainer:         emily@emdash.ie
category:           Web
build-type:         Simple

common warnings
    ghc-options: -Wall

executable server
    import:           warnings
    main-is:          server/Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
      base ^>=4.18.2.1,
      directory,
      servant-js,
      servant-server,
      org-mode,
      text,
      warp,
      filepath,
      containers,
      bytestring,
      aeson,
    hs-source-dirs:   src
    default-language: GHC2021
